--- a/app/scss/common.scss
+++ b/app/scss/common.scss
@@ -20,8 +20,17 @@ html {
     display: flex;
     justify-content: center;
     text-align: center;
-    font-size: rem(30);
     background-image: linear-gradient(45deg, #404996, #4752a4);
+    i,
+    a {
+        flex: 1;
+        line-height: rem(80);
+        font-size: rem(70);
+    }
+    h1 {
+        flex: 9;
+        font-size: rem(50);
+    }
 }
 
 body {
